--- a/index.css
+++ b/index.css
@@ -58,11 +58,11 @@ img {
   top: 0;
   right: -110%;
   height: 100vh;
-  width: 210px;
+  width: 230px;
   background-color: white;
   flex-direction: column;
   z-index: 1000;
-  transition: right 1s ease;
+  transition: right 0.5s ease;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -77,9 +77,13 @@ img {
   width: 20px;
   background-color: white;
   border: none;
-  margin-left: 1rem;
+  margin-left: 13rem;
   margin-top: 0.5rem;
   color: gray;
+}
+
+#x:hover{
+  background-color: #F5F5F5;
 }
 
 .nav-column a {
@@ -99,8 +103,8 @@ img {
   color: #000000;
 }
 
-.m-hero{
-  width: 100%; 
+.m-hero {
+  width: 100%;
 }
 .hero-txt h1 {
   color: #000000;
@@ -113,7 +117,6 @@ img {
   width: 25%;
   bottom: 55%;
   left: 10%;
-  
 }
 
 .hero-txt p {
@@ -135,16 +138,16 @@ img {
   cursor: pointer;
 }
 
-.top-container {
-  
+.top-container,
+.feature-container {
   width: 60.5rem;
   margin: auto;
   height: 25rem;
   margin-top: 2rem;
-
 }
 
-.top-heading {
+.top-heading,
+.feature-heading {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -152,26 +155,29 @@ img {
   margin: auto;
 }
 
-.heading-div h4 {
+.heading-div h4,
+.feat-txt h4 {
   font-size: 22px;
   color: #000000;
 }
 
-.heading-div p {
+.heading-div p,
+.feat-txt p {
   font-size: 10px;
   margin-top: 7px;
   color: #555555;
 }
-.h-btn {
+.h-btn,
+.feat-btn {
   border-radius: 15px;
 }
-.h-btn button {
+.h-btn button,
+.feat-btn button {
   font-size: 10px;
   border-radius: 15px;
   height: 2rem;
   padding: 12px;
   border: 1px solid white;
-  
 }
 
 .top-card-container {
@@ -181,8 +187,15 @@ img {
   justify-content: space-between;
 }
 
+.card:hover {
+  background-color: #fdfdfd;
+}
+.card-txt h5:hover {
+  color: #ff782d;
+}
+
 .card {
-  border: 2px solid #EAEAEA;
+  border: 2px solid #eaeaea;
   width: 11rem;
   height: 9rem;
   border-radius: 7px;
@@ -220,159 +233,90 @@ img {
   text-align: center;
 }
 
-
-
-
-@media (max-width: 500px) {
-  nav,
-  .reg,
-  .slash {
-    display: none;
-  }
+.feature-container {
+  height: 27rem;
+}
+.feature-card-container {
+  margin-top: 2rem;
+  width: 100%;
+  height: 21rem;
+  display: flex;
+  justify-content: space-between;
 }
 
-@media (max-width: 360px) {
-
-  
-  .top-card-container {
-    overflow-x: auto;
-    scroll-behavior: smooth;
-    gap: 2rem;
-  }
-  .heading-div h4 {
-    font-size: 15px;
-  }
-  .heading-div p {
-    font-size: 10px;
-  }
-  .h-btn button {
-    font-size: 7px;
-    font-weight: bold;
-  }
-  .top-heading {
-    width: 100%;
-  }
-  .top-container {
-    width: 90%;
-  }
+.ft-card {
+  height: 19rem;
+  width: 17rem;
+  border-radius: 10px;
+}
+.ft-card:hover,
+.ft-card:focus {
+  border: 1px solid #eaeaea;
+  box-shadow: 0px 4px 10px 0px;
 }
 
-@media (min-width: 360px) {
-  .top-card-container {
-    overflow-x: auto;
-    scroll-behavior: smooth;
-    width: 100%;
-    gap: 1rem;
-  }
-  .top-heading {
-    width: 100%;
-  }
-  .top-container {
-    width: 90%;
-  }
-}
-@media (min-width: 1280px) {
-  .top-card-container {
-    overflow-x: auto;
-    scroll-behavior: smooth;
-    width: 100%;
-    gap: 1rem;
-  }
-  .top-container {
-    width: 50%;
-  }
+.ft-card img {
+  width: 100%;
+  height: 10rem;
 }
 
-@media (max-width: 540px) {
-  nav {
-    display: none;
-  }
+.ft-card-txt {
+  margin-top: 5px;
 
- 
-  .list-icon {
-    display: contents;
-  }
-
-  .hero-txt {
-    width: 7rem;
-    margin-top: -9rem;
-    padding: 5px;
-    position: unset;
-  }
-
-  .hero-txt-btn {
-    padding: 5px;
-    width: 4rem;
-    border-radius: 25px;
-    border: 1px solid #ff782d;
-    font-size: 7px;
-  }
-
-  .hero-txt h1 {
-    font-size: 10px;
-  }
-  .hero-txt p {
-    font-size: 8px;
-  }
-
-  .card {
-    width: 12rem;
-    height: 7.5rem;
-  }
+  width: 93%;
+  margin: auto;
 }
 
-@media (max-width: 768px) {
-  nav a,
-  .search-container a {
-    font-size: 7.5px;
-  }
-
-  .search-container {
-    width: 7.5rem;
-    display: flex;
-    justify-content: space-around;
-  }
-  .search-container img {
-    width: 20px;
-    height: 20px;
-  }
-
-  .hero-txt {
-    width: 9rem;
-    margin-top: -10rem;
-    padding: 5px;
-    position: unset;
-    margin-left: 4rem;
-  }
-
- 
-
+.ft-card-txt p {
+  font-size: 10px;
+  margin-top: 5px;
 }
-@media (max-width: 2800px) {
-  .hero img {
-    height: 11rem;
 
-  }
-  
-  .hero-txt {
-    width: 9rem;
-    margin-top: -10rem;
-    padding: 5px;
-    position: unset;
-  }
+.ft-card-txt h5 {
+  margin-top: 5px;
+}
 
-  .hero-txt-btn {
-    padding: 5px;
-    width: 4rem;
-    border-radius: 25px;
-    border: 1px solid #ff782d;
-    font-size: 7px;
-  }
+.ft-card-txt h5:hover,
+.ft-card-txt h5:focus {
+  color: #ff782d;
+}
 
-  .hero-txt h1 {
-    font-size: 10px;
-  }
-  .hero-txt p {
-    font-size: 8px;
-  }
+.ft-date {
+  margin-top: 0.8rem;
+  width: 10.5rem;
+  margin-left: 0.6rem;
+}
+.ft-date img {
+  width: 10rem;
+  height: 1rem;
+}
+.amount {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+  align-items: center;
+  width: 95%;
+  margin-left: 0.6rem;
+}
+
+.amount b {
+  color: #55be24;
+  font-size: 10px;
+}
+
+.amount div s {
+  font-size: 12px;
+  color: #9d9d9d;
+}
+.amount div {
+  width: 3.8rem;
+  display: flex;
+  justify-content: space-between;
+}
+.amount button {
+  background-color: white;
+  border-radius: 10px;
+  border: 1px solid white;
+  font-size: 9px;
+  font-weight: bold;
 }
