--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@ nav a,
   color: #000000;
   background-color: #ffffff;
 }
+
 .search-container {
   display: flex;
   align-items: center;
@@ -143,7 +144,7 @@ img {
   width: 60.5rem;
   margin: auto;
   height: 25rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .top-heading,
@@ -177,7 +178,9 @@ img {
   border-radius: 15px;
   height: 2rem;
   padding: 12px;
-  border: 1px solid white;
+  border: 1px solid rgb(211, 211, 211);
+  background-color: white;
+  text-align: center;
 }
 
 .top-card-container {
@@ -249,9 +252,8 @@ img {
   width: 17rem;
   border-radius: 10px;
 }
-.ft-card:hover,
-.ft-card:focus {
-  border: 1px solid #eaeaea;
+.ft-card:hover{
+  border: 0.1px solid #eaeaea;
   box-shadow: 0px 4px 10px 0px;
 }
 
