--- a/index.css
+++ b/index.css
@@ -75,10 +75,11 @@ img {
   border-radius: 5px;
   cursor: pointer;
   font-size: 20px;
+  text-shadow: #F5F5F5;
   width: 20px;
   background-color: white;
   border: none;
-  margin-left: 13rem;
+  margin-left: 12rem;
   margin-top: 0.5rem;
   color: gray;
 }
@@ -145,7 +146,6 @@ img {
   margin: auto;
   height: 25rem;
   margin-top: 1rem;
- 
 }
 
 
@@ -209,7 +209,7 @@ img {
 .card-icon {
   width: 1.8rem;
   margin: auto;
-  margin-top: 3rem;
+  margin-top: 2.1rem;
 }
 
 .card-icon img {
@@ -241,25 +241,28 @@ img {
 .feature-card-container {
   margin-top: 2rem;
   width: 100%;
-  height: 19.5rem;
+  height: 20.5rem;
   display: flex;
   justify-content: space-between;
-  
+  align-items: center; 
 }
 
 .feature-container{
-  height: 47rem;
+  height: 48rem;
 }
+
+
 
 
 .ft-card {
-  height: 19rem;
-  width: 17rem;
+  height: 18rem;
+  width: 18rem;
   border-radius: 10px;
+
 }
 .ft-card:hover{
   border: 0.1px solid #eaeaea;
-  box-shadow: 0px 4px 10px 0px;
+  box-shadow: #dfdddd;
 }
 
 .ft-card img {
