--- a/index.css
+++ b/index.css
@@ -238,6 +238,7 @@ img {
   font-size: 10px;
   color: #555555;
   text-align: center;
+  margin-top: 0.5rem;
 }
 
 .feature-card-container {
@@ -429,8 +430,6 @@ img {
 .count-bx p{
   font-size: 10px;
   font-weight: bold;
-  background-color: red;
- 
 }
 .count-bx p, .count-bx h3{
   width: 7rem;
@@ -440,4 +439,58 @@ img {
 
 .count-bx p,.count-bx h3{
   margin: auto;
+}
+
+
+.grow-skill-temp{
+
+  width: 60.5rem;
+  height: 20rem;
+  margin: auto;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.temp-img{
+  width: 50%;
+  height: 20rem;
+}
+
+.temp-img img{
+  width: 100%;
+  height: 20rem;
+}
+.temp-txt{
+  width: 45%;
+  height: 17rem;
+}
+
+.temp-txt p{
+  color: #555555;
+  font-size: 12px;
+  text-shadow: #000000;
+}
+
+.temp-txt div {
+  margin-top: 1rem;
+}
+.temp-txt div p{
+  color: #000000;
+  padding: 5px;
+  font-size: 10px;
+  font-weight: 500;
+}
+
+.temp-btn{
+  padding: 10px;
+  border-radius: 25px;
+  color: white;
+  background-color: #FF782D;
+  border: #FF782D;
+  font-size: 12px;
+  width: 7.5rem;
+  margin-top: 1rem;
+  height: 2.5rem;
+ 
 }
