--- a/index.css
+++ b/index.css
@@ -75,7 +75,7 @@ img {
   border-radius: 5px;
   cursor: pointer;
   font-size: 20px;
-  text-shadow: #F5F5F5;
+  text-shadow: #f5f5f5;
   width: 20px;
   background-color: white;
   border: none;
@@ -84,8 +84,8 @@ img {
   color: gray;
 }
 
-#x:hover{
-  background-color: #F5F5F5;
+#x:hover {
+  background-color: #f5f5f5;
 }
 
 .nav-column a {
@@ -190,7 +190,7 @@ img {
   justify-content: space-between;
 }
 
-.top-card-container::-webkit-scrollbar{
+.top-card-container::-webkit-scrollbar {
   width: 0;
 }
 
@@ -247,15 +247,15 @@ img {
   height: 20.5rem;
   display: flex;
   justify-content: space-between;
-  align-items: center; 
+  align-items: center;
   margin-top: 0.5rem;
 }
 
-.feature-card-container::-webkit-scrollbar{
+.feature-card-container::-webkit-scrollbar {
   width: 0;
 }
 
-.feature-container{
+.feature-container {
   height: 48rem;
   margin-top: 2rem;
 }
@@ -264,9 +264,8 @@ img {
   height: 18rem;
   width: 18rem;
   border-radius: 10px;
-
 }
-.ft-card:hover{
+.ft-card:hover {
   border: 0.1px solid #cccaca;
   box-shadow: #dfdddd;
 }
@@ -337,60 +336,58 @@ img {
   font-weight: bold;
 }
 
-
-.lp-ads-container{
+.lp-ads-container {
   width: 60.5rem;
   margin: auto;
-  height:13.2rem;
+  height: 13.2rem;
   margin-top: -3rem;
   border-radius: 12px;
 }
 
-.lp-ads-container img{
+.lp-ads-container img {
   width: 100%;
-  height:13rem;
+  height: 13rem;
 }
-.lp-txt-box{
+.lp-txt-box {
   width: 20.5rem;
   position: relative;
   top: -90%;
   left: 4%;
 }
 
-.lp-btn-div{
+.lp-btn-div {
   margin-top: 1.5rem;
 }
-.lp-txt-div p{
+.lp-txt-div p {
   font-size: 11px;
   color: #555555;
   font-weight: bold;
 }
 
-.lp-txt-div h4{
+.lp-txt-div h4 {
   font-size: 25px;
   color: #000000;
 }
 
-.lp-btn-div p{
+.lp-btn-div p {
   font-size: 12px;
   color: #555555;
 }
 
-.lp-btn-div button{
+.lp-btn-div button {
   padding: 7px;
   border-radius: 20px;
   font-size: 10px;
   margin-top: 1rem;
-  background-color: #FF782D;
-  border: 1px solid #FF782D;
-  color: #FFFFFF;
+  background-color: #ff782d;
+  border: 1px solid #ff782d;
+  color: #ffffff;
   cursor: pointer;
   width: 7rem;
   height: 2rem;
-  
 }
 
-.counting-container{
+.counting-container {
   width: 60.5;
   height: 8rem;
   margin: auto;
@@ -401,49 +398,47 @@ img {
   overflow-y: hidden;
   gap: 1rem;
 }
-.counting-container::-webkit-scrollbar{
+.counting-container::-webkit-scrollbar {
   width: 0;
 }
 
-.count-bx{
+.count-bx {
   width: 12rem;
   height: 7rem;
   border-radius: 10px;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
-.count-bx div{
+.count-bx div {
   margin: auto;
   width: 8rem;
   margin-top: 2rem;
-
 }
 
-.count-bx  div p{
+.count-bx div p {
   margin-top: 0.7rem;
 }
-.count-bx h3{
+.count-bx h3 {
   font-size: 20px;
-  color: #FF782D;
+  color: #ff782d;
 }
 
-.count-bx p{
+.count-bx p {
   font-size: 10px;
   font-weight: bold;
 }
-.count-bx p, .count-bx h3{
+.count-bx p,
+.count-bx h3 {
   width: 7rem;
   text-align: center;
- 
 }
 
-.count-bx p,.count-bx h3{
+.count-bx p,
+.count-bx h3 {
   margin: auto;
 }
 
-
-.grow-skill-temp{
-
+.grow-skill-temp {
   width: 60.5rem;
   height: 20rem;
   margin: auto;
@@ -452,21 +447,21 @@ img {
   justify-content: space-between;
   align-items: center;
 }
-.temp-img{
+.temp-img {
   width: 50%;
   height: 20rem;
 }
 
-.temp-img img{
+.temp-img img {
   width: 100%;
   height: 20rem;
 }
-.temp-txt{
+.temp-txt {
   width: 45%;
   height: 17rem;
 }
 
-.temp-txt p{
+.temp-txt p {
   color: #555555;
   font-size: 12px;
   text-shadow: #000000;
@@ -475,22 +470,81 @@ img {
 .temp-txt div {
   margin-top: 1rem;
 }
-.temp-txt div p{
+.temp-txt div p {
   color: #000000;
   padding: 5px;
   font-size: 10px;
   font-weight: 500;
 }
 
-.temp-btn{
+.temp-btn {
   padding: 10px;
   border-radius: 25px;
   color: white;
-  background-color: #FF782D;
-  border: #FF782D;
+  background-color: #ff782d;
+  border: #ff782d;
   font-size: 12px;
   width: 7.5rem;
   margin-top: 1rem;
-  height: 2.5rem;
- 
+  height: 1.9rem;
+
+}
+
+.word-p-container {
+  margin: auto;
+  width: 60.5rem;
+  margin-top: 2.5rem;
+  height: 13.2rem;
+}
+
+.word-p-container img {
+  height: 13rem;
+  width: 100%;
+}
+.word-div {
+  width: 50%;
+}
+.word-span {
+  position: relative;
+  top: -90%;
+  left: 25%;
+  
+}
+.word-p {
+  width: 100%;
+  text-align: center;
+  margin: auto;
+}
+.word-p p {
+  font-size: 10px;
+  font-weight: bold;
+}
+.word-p h3 {
+  margin-top: 0.5rem;
+  font-size: 23px;
+  font-weight: 550;
+}
+
+.word-btn {
+  margin-top: 1rem;
+  padding: 10px;
+}
+.word-btn button {
+  padding: 10px;
+  border-radius: 17px;
+  background-color: #ff782d;
+  border: none;
+  color: white;
+}
+.word-btn div{
+  width: 7.2rem;
+  position: relative;
+  left: 35%;
+  margin-top: 1rem;
+  border-radius: 17px;
+}
+
+.word-btn p {
+  font-size: 13px;
+  color: #555555;
 }
