--- a/media.css
+++ b/media.css
@@ -1,10 +1,3 @@
-@media (max-width: 500px) {
-  nav,
-  .reg,
-  .slash {
-    display: none;
-  }
-}
 
 @media (max-width: 360px) {
   .top-card-container,
@@ -37,11 +30,60 @@
   }
   .top-container,
   .feature-container,
-  .lp-ads-container,.counting-container,.grow-skill-temp{
+  .lp-ads-container,.counting-container,.grow-skill-temp,.word-p-container{
     width: 90%;
   }
   .ft-card {
     width: 20rem;
+  }
+ 
+
+  .word-p-container {
+    height: 8rem;
+  }
+
+  .word-p-container img {
+    height: 8rem;
+    width: 100%;
+  }
+  .word-p {
+    width: 10rem;
+  }
+  .word-p p {
+    font-size: 7px;
+  }
+  .word-p h3 {
+    margin-top: 0.5rem;
+    font-size: 11px;
+    font-weight: 550;
+  }
+
+  .word-btn div{
+    width: 4.4rem;
+    margin-top: 0.4rem;
+    left: 35%;
+  }
+
+  .word-btn button {
+    padding: 10px;
+    border-radius: 17px;
+    background-color: #ff782d;
+    border: none;
+    color: white;
+    font-size: 7px;
+  }
+
+  .word-btn div button{
+    font-size: 7px
+  }
+  
+  .word-div {
+    width: 90%;
+  }
+  .word-span {
+    position:relative ;
+    top: -110%;
+    left: 6%;
   }
 }
 
@@ -60,11 +102,19 @@
   }
   .top-container,
   .feature-container,
-  .lp-ads-container,.counting-container ,.grow-skill-temp{
+  .lp-ads-container,.counting-container ,.grow-skill-temp,.word-p-container{
     width: 90%;
   }
+  
 }
 
+@media (max-width: 500px) {
+  nav,
+  .reg,
+  .slash {
+    display: none;
+  }
+}
 @media (max-width: 540px) {
   nav {
     display: none;
@@ -203,12 +253,11 @@
   font-size: 9px;
   width: 5rem;
   margin-top: 1rem;
-  height: 2rem;
+  height: 1.7rem;
   
 }
 
-
-}
+} 
 
 @media (min-width: 1280px) {
   .top-card-container,
@@ -221,7 +270,8 @@
   }
   .top-container,
   .feature-container,
-  .lp-ads-container, .counting-container,.grow-skill-temp {
+  .lp-ads-container, .counting-container,.grow-skill-temp,
+  .word-p-container {
     width: 50%;
   }
 
@@ -231,6 +281,41 @@
 .counting-container{
   gap: 1rem;
 }
+.word-span {
+  position: relative;
+  top: -100%;
+  left:1%;
+}
+.word-p-container {
+  height: 10rem;
+}
+.word-div {
+  width: 100%;
+  height: 10rem;
+}
+.word-btn button {
+  font-size: 10px;
+}
+.word-p-container img {
+  height: 10rem;
+}
+
+.word-p p{
+  margin-top: 1rem;
+}
+.word-p h3 {
+  margin-top:1rem;
+  font-size: 18px;
+  font-weight: 550;
+}
+.word-btn p {
+  font-size: 7px;
+  color: #555555;
+  width: 50%;
+  margin-left: 25% ;
+  margin-top: -1rem;
+}
+
 }
 
 @media (max-width: 2800px) {
