--- a/index.css
+++ b/index.css
@@ -142,7 +142,6 @@ img {
 
 .top-container,
 .feature-container {
-  width: 60.5rem;
   margin: auto;
   height: 24.3rem;
   margin-top: 1rem;
@@ -337,7 +336,6 @@ img {
 }
 
 .lp-ads-container {
-  width: 60.5rem;
   margin: auto;
   height: 13.2rem;
   margin-top: -3rem;
@@ -388,7 +386,6 @@ img {
 }
 
 .counting-container {
-  width: 60.5;
   height: 8rem;
   margin: auto;
   margin-top: 2rem;
@@ -492,9 +489,7 @@ img {
 
 .word-p-container {
   margin: auto;
-  width: 60.5rem;
   margin-top: 2.5rem;
-  height: 13.2rem;
 }
 
 .word-p-container img {
@@ -503,12 +498,12 @@ img {
 }
 .word-div {
   width: 50%;
+  margin-top: -11rem;
 }
 .word-span {
   position: relative;
   top: -90%;
   left: 25%;
-  
 }
 .word-p {
   width: 100%;
@@ -548,3 +543,125 @@ img {
   font-size: 13px;
   color: #555555;
 }
+
+.feed-back-container{
+  margin: auto;
+  margin-top: 4rem;
+}
+
+.fb-heading{
+ 
+  width: 50%;
+  margin: auto;
+  text-align: center;
+}
+
+.fb-heading h3{
+  font-size: 23px;
+}
+.fb-heading p{
+  font-size: 13px;
+  margin-top: 5px;
+  color: #555555;
+}
+
+.students-fb{
+  overflow-x: auto;
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+.students-fb::-webkit-scrollbar{
+  width: 0;
+}
+.st-fb-box{
+  width: 13rem;
+  height: 12rem;
+  border-radius: 10px;
+  border: 1px solid rgb(243, 241, 241);
+}
+.st-fb-box div{
+  width: 10rem;
+  margin: auto;
+  border-radius: 5px;
+}
+.fb-slash{
+  font-size: 30px;
+  font-weight: bolder;
+  color: #E0E0E0;
+}
+
+.fb-txt{
+  font-size: 10px;
+  word-spacing: 3px;
+  color: #000000;
+  font-weight: 100;
+}
+.st-name p{
+  margin-top: 0.5rem;
+  color: #555555;
+  font-size: 12px;
+}
+
+.let-start-container{
+  margin: auto;
+  height: 13rem;
+  border-radius: 7px;
+  margin-top: 2rem;
+}
+
+.let-start-container img{
+  width: 100%;
+  height: 13rem;
+  
+}
+
+
+.latest-container{
+  border: 1px solid red;
+  margin: auto;
+  margin-top: 2.5rem;
+  height: 30rem;
+}
+
+.latest-heading{
+  border: 1px solid green;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.latest-txt{
+  width: 85%;
+  border: 1px solid red
+}
+
+.latest-txt h2{
+  color:#000000;
+}
+.latest-txt p{
+  color: #555555;
+  font-size: 12px;
+}
+
+.latest-btn{
+  
+  border-radius: 25px;
+  width: 6rem;
+}
+
+.latest-btn button{
+  padding: 10px;
+  border-radius: 25px;
+  width: 6rem;
+  text-align: center;
+  border: 1px solid rgb(211, 211, 211);
+  background-color: white;
+  font-size: 10px;
+  
+}
+
+
+
