--- a/index.css
+++ b/index.css
@@ -619,14 +619,12 @@ img {
 
 
 .latest-container{
-  border: 1px solid red;
   margin: auto;
   margin-top: 2.5rem;
-  height: 30rem;
+  height: 24.5rem;
 }
 
 .latest-heading{
-  border: 1px solid green;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -635,9 +633,12 @@ img {
 
 .latest-txt{
   width: 85%;
-  border: 1px solid red
 }
-
+.latest-card:hover{
+  color: #FF782D;
+  border: 0.1px solid #cccaca;
+  box-shadow: #dfdddd;
+}
 .latest-txt h2{
   color:#000000;
 }
@@ -647,7 +648,6 @@ img {
 }
 
 .latest-btn{
-  
   border-radius: 25px;
   width: 6rem;
 }
@@ -663,5 +663,49 @@ img {
   
 }
 
+.latest-card-slider{
+  margin-top: 2rem;
+  height: 19rem;
+  width: 100%;
+  display: flex;
+  gap: 1rem;
+  overflow-x: auto;
+  align-items: center;
+}
+.latest-card-slider::-webkit-scrollbar{
+  width: 0;
+}
+
+.latest-card{
+  width: 17.5rem;
+  border-radius: 10px;
+}
+.latest-card img{
+  width: 100%;
+  height: 10rem;
+}
+
+.latest-txt-box{
+  
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+
+}
+
+.latest-txt-box img{
+  height:1.5rem;
+  width: 5rem;
+}
+
+.latest-txt-box h5{
+  font-size: 13px;
+  font-weight: lighter;
+}
+.latest-txt-box p{
+  color: #555555;
+  font-size: 11px;
+  margin-top: 0.1rem;
+}
 
 
