--- a/index.css
+++ b/index.css
@@ -187,6 +187,7 @@ img {
   height: 20;
   display: flex;
   justify-content: space-between;
+  
 }
 
 .top-card-container::-webkit-scrollbar {
@@ -248,10 +249,11 @@ img {
   justify-content: space-between;
   align-items: center;
   margin-top: 0.5rem;
+ 
 }
 
 .feature-card-container::-webkit-scrollbar {
-  width: 0;
+width: 0;
 }
 
 .feature-container {
@@ -261,7 +263,7 @@ img {
 
 .ft-card {
   height: 18rem;
-  width: 18rem;
+  width: 100%;
   border-radius: 10px;
 }
 .ft-card:hover {
@@ -287,6 +289,7 @@ img {
 
 .ft-card-txt h5 {
   margin-top: 5px;
+  font-size: 12px;
 }
 
 .ft-card-txt h5:hover,
