--- a/index.css
+++ b/index.css
@@ -718,10 +718,10 @@ width: 0;
 
 
 footer{
-  height: 21rem;
   background-color: #F5F5F5;
   width: 100%;
-  border: 1px solid #F5F5F5;;
+  border: 1px solid #F5F5F5;
+  margin-top: 2rem;
 }
 
 .footer-container{
